; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_ctldir.c_zfsctl_snapshot_ismounted.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_zfs_ctldir.c_zfsctl_snapshot_ismounted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@B_FALSE = common dso_local global i32 0, align 4
@zfs_snapshot_lock = common dso_local global i32 0, align 4
@RW_READER = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @zfsctl_snapshot_ismounted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfsctl_snapshot_ismounted(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i32, i32* @B_FALSE, align 4
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* @RW_READER, align 4
  %7 = call i32 @rw_enter(i32* @zfs_snapshot_lock, i32 %6)
  %8 = load i8*, i8** %2, align 8
  %9 = call i32* @zfsctl_snapshot_find_by_name(i8* %8)
  store i32* %9, i32** %3, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @zfsctl_snapshot_rele(i32* %12)
  %14 = load i32, i32* @B_TRUE, align 4
  store i32 %14, i32* %4, align 4
  br label %15

15:                                               ; preds = %11, %1
  %16 = call i32 @rw_exit(i32* @zfs_snapshot_lock)
  %17 = load i32, i32* %4, align 4
  ret i32 %17
}

declare dso_local i32 @rw_enter(i32*, i32) #1

declare dso_local i32* @zfsctl_snapshot_find_by_name(i8*) #1

declare dso_local i32 @zfsctl_snapshot_rele(i32*) #1

declare dso_local i32 @rw_exit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
